Optimize padding on small screens, fix links

--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -491,6 +491,12 @@ h5, h6 {
 
   .theme-default-content:not(.custom) {
     padding: 3.5rem 2.5rem 1rem;
+    @media (max-width: 899px) {
+      padding: 2rem;
+    }
+    @media (max-width: 419px) {
+      padding: 1.5rem;
+    }
   }
 
   h2 {
